--- a/configure.ac
+++ b/configure.ac
@@ -36,7 +36,8 @@ AC_ARG_WITH(
 )
 
 PKG_CHECK_MODULES(libplist, libplist >= 1.0)
-PKG_CHECK_MODULES(libcurl, libcurl >= 1.0)
+PKG_CHECK_MODULES(curl, libcurl >= 1.0)
+PKG_CHECK_MODULES(zlib, zlib >= 1.0)
 PKG_CHECK_MODULES(libfragmentzip, libfragmentzip >= 1.0)
 AS_IF([test "x$with_libcrypto" != xno],
     [PKG_CHECK_MODULES(libcrypto, libcrypto >= 1.0)]
