--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,7 @@ Makefile.in
 aclocal.m4
 autom4te.cache
 compile
-config.h
-config.h.in
-config.log
-config.status
-config.guess
-config.sub
+config.*
 configure
 depcomp
 external/.DS_Store
