--- a/.gitignore
+++ b/.gitignore
@@ -10,20 +10,19 @@ compile
 config.*
 configure
 depcomp
-external/.DS_Store
 install-sh
 libtool
 ltmain.sh
 m4
 missing
-tsschecker/.DS_Store
-tsschecker/all.h.bak
-tsschecker/*.a
-tsschecker/*.o
-tsschecker/*.la
-tsschecker/*.lo
-tsschecker/tsschecker
-tsschecker/tsschecker.exe
-tsschecker/.libs
-tsschecker/.deps
+*/.DS_Store
+*/all.h.bak
+*/*.a
+*/*.o
+*/*.la
+*/*.lo
+*/tsschecker
+*/tsschecker.exe
+*/.libs
+*/.deps
 stamp-h1
