ReadMe: fix cURL link

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.DS_Store
+*.DS_Store
 .patch
 *.diff
+*/.libs/*
+*/.deps/*
+*.a
+*.o
+*.la
+*.lo
 .*.swp
 Makefile
 Makefile.in
@@ -15,14 +21,7 @@ libtool
 ltmain.sh
 m4
 missing
-*/.DS_Store
 */all.h.bak
-*/*.a
-*/*.o
-*/*.la
-*/*.lo
 */tsschecker
 */tsschecker.exe
-*/.libs
-*/.deps
 stamp-h1
